sandbox/output
MedicineClashTest.java:51: error: cannot find symbol
            Arrays.asList(
            ^
  symbol:   variable Arrays
  location: class MedicineClashTest
MedicineClashTest.java:56: error: cannot find symbol
            Arrays.asList(
            ^
  symbol:   variable Arrays
  location: class MedicineClashTest
2 errors
